# dinox

./: .gitignore  AUDIO_RECOVERY_PLAN.md  AUTHORS  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  CRASH_ANALYSIS_2026-02-07.md  DEBUG.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_UI_SECURITY.md  DEVELOPMENT_PLAN_WINDOWS.md  DISAPPEARING_MESSAGES_PLAN.md  DefaultVideoEncoderFactory.txt  FIX_115_CUSTOM_HOST_PORT.md  FIX_1766_MEMORY_LEAK.md  MUC_IMPROVEMENT_PLAN.md  NOTICE  OMEMO2_IMPLEMENTATION_PLAN.md  OMEMO_BUG_FIX.md  OPENPGP_PORTING_GUIDE.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2025.md  TESTING.md  TEST_1764_RESULTS.md  TEST_1766_RESULTS.md  VERSION  Voice Message System -- Ist-Zustand.txt  WEBRTC_STATUS.md  XEP_AUDIT.md  agent_conversation_log.md  check_translations.py  cross_file.txt  debug_log.txt  debug_log_2.txt  debug_log_3.txt  debug_log_4.txt  debug_log_5.txt  debug_log_6.txt  (+18 more)
main/: meson.build
main/data/: bot_create_dialog.ui  bot_manager_dialog.ui  chat_input.ui  conversation_details.ui  conversation_row.ui  dinox.rc  file_send_overlay.ui  global_search.ui  gresource.gresource  gresource.xml  im.github.rallep71.DinoX.appdata.xml  im.github.rallep71.DinoX.appdata.xml.in  im.github.rallep71.DinoX.desktop  im.github.rallep71.DinoX.service  join_room_dialog1.ui  join_room_dialog2.ui  main_window.ui  main_window_placeholder.ui  menu_app.ui  menu_conversation.ui  style.css
main/data/add_conversation/: add_contact_dialog.ui  add_groupchat_dialog.ui  list_row.ui  room_browser_dialog.ui  select_jid_fragment.ui
main/data/gtk/: help-overlay.ui
main/data/icons/hicolor/: index.theme
main/data/preferences_window/: account_preferences_subpage.ui  add_account_dialog.ui  change_password_dialog.ui  general_preferences_page.ui  preferences_dialog.ui
main/po/: POTFILES  ar.po  ca.po  cs.po  da.po  da.po~  de.po  dino.pot  el.po  en.po  eo.po  eo.po~  es.po  es.po~  et.po  et.po~  eu.po  eu.po~  fa.po  fa.po~  fi.po  fi.po~  fr.po  fr.po~  gl.po  gl.po~  hi.po  hi.po~  hu.po  hu.po~  hy.po  ia.po  id.po  id.po~  ie.po  ie.po~  is.po  is.po~  it.po  ja.po  (+35 more)
main/src/: main.vala
main/src/service/: audio_video_device_service.vala
main/src/ui/: application.vala  bot_create_dialog.vala  bot_manager_dialog.vala  certstore_win32.c  certstore_win32.h  conversation_details.vala  conversation_view.vala  conversation_view_controller.vala  file_send_overlay.vala  global_search.vala  main_window.vala  main_window_controller.vala  muc_admin_dialog.vala  notifier_freedesktop.vala  notifier_gnotifications.vala  notifier_windows.vala  sticker_manager.vala  sticker_pack_folder_import_dialog.vala  sticker_pack_import_dialog.vala  systray.vala  systray_sni_dbus.c  systray_sni_dbus.h  systray_win32.c  systray_win32.h  systray_windows.vala  toast_win32.c  toast_win32.h
main/src/ui/add_conversation/: add_conference_dialog.vala  add_contact_dialog.vala  add_groupchat_dialog.vala  conference_details_fragment.vala  conference_list.vala  contact_browser_dialog.vala  list_row.vala  room_browser_dialog.vala  roster_list.vala  select_contact_dialog.vala  select_jid_fragment.vala  user_search_dialog.vala
main/src/ui/call_window/: audio_settings_popover.vala  call_bottom_bar.vala  call_connection_details_window.vala  call_dialpad.vala  call_encryption_button.vala  call_window.vala  call_window_controller.vala  group_call_participant_list.vala  participant_widget.vala
main/src/ui/chat_input/: audio_recorder.vala  chat_input_controller.vala  chat_text_view.vala  encryption_button.vala  gva_compat.c  occupants_tab_completer.vala  smiley_converter.vala  (+6 more)
main/src/view_model/: conversation_details.vala  preferences_dialog.vala
main/src/windows/: conversation_details.vala
main/tests/: audit_ui_helpers.vala  common.vala  preferences_row_test.vala
main/vapi/: certstore_win32.vapi  systray_sni_dbus.vapi  systray_win32.vapi  toast_win32.vapi
plugins/bot-features/: BUG_AUDIT.md  meson.build  strip_omemo_vapi.py
plugins/bot-features/src/: ai_integration.vala  auth_middleware.vala  bot_omemo.vala  bot_registry.vala  bot_utils.vala  botfather_handler.vala  cert_gen.c  cert_gen.h  ejabberd_api.vala  http_server.vala  message_router.vala  plugin.vala  rate_limiter.vala  register_plugin.vala  session_pool.vala  telegram_bridge.vala  token_manager.vala  webhook_dispatcher.vala
plugins/bot-features/tests/: audit_tests.vala  bot_tests.vala  common.vala
plugins/bot-features/vapi/: cert_gen.vapi
plugins/http-files/: meson.build
plugins/http-files/src/: file_provider.vala  file_sender.vala  plugin.vala
plugins/http-files/tests/: common.vala  http_files_test.vala
plugins/mqtt/: meson.build
plugins/mqtt/src/: alert_manager.vala  bot_conversation.vala  bridge_manager.vala  command_handler.vala  connection_config.vala  database.vala  discovery_manager.vala  mqtt_bot_manager_dialog.vala  mqtt_client.vala  mqtt_utils.vala  plugin.vala  register_plugin.vala  server_detector.vala  settings_page.vala  topic_manager_dialog.vala
plugins/mqtt/tests/: common.vala  mqtt_tests.vala
plugins/mqtt/vapi/: mosquitto.vapi
plugins/openpgp/: meson.build
plugins/openpgp/po/: POTFILES  ar.po  ca.po  ca.po~  cs.po  da.po  da.po~  de.po  de.po~  dino-openpgp.pot  el.po  el.po~  en.po  eo.po  eo.po~  es.po  et.po  eu.po  eu.po~  fa.po  fi.po  fi.po~  fr.po  gl.po  hi.po  hu.po  ia.po  ia.po~  id.po  ie.po  ie.po~  is.po  is.po~  it.po  it.po~  ja.po  kab.po  ko.po  lb.po  lb.po~  (+26 more)
plugins/openpgp/src/: contact_details_provider.vala  database.vala  encryption_list_entry.vala  encryption_preferences_entry.vala  gpg_cli_helper.vala  gpgme_fix.c  gpgme_fix.h  gpgme_helper.vala  key_management_dialog.vala  manager.vala  plugin.vala  stream_module.vala  xep0373_key_manager.vala
plugins/openpgp/tests/: armor_parser.vala  common.vala  gpg_keylist_parser.vala  stream_module_logic.vala
plugins/openpgp/vapi/: gpgme.vapi
plugins/tor-manager/: meson.build
plugins/tor-manager/src/: moat_client.vala  plugin.vala  register_plugin.vala  settings_page.vala  tor_controller.vala  tor_manager.vala  ui_indicator.vala
(+489 files in other folders)
